--- a/styles/architechs.css
+++ b/styles/architechs.css
@@ -81,3 +81,33 @@ nav li a{
         flex-direction: column;
     }
 }
+/* main styles */
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+/*  tems styles*/
+.tems-container{
+    display: flex;
+    align-items: center;
+}
+.tems-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+.tems-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.tems-title{
+    font-size: 2.8rem;
+}
+.tems-title .Quick-list{
+    color: #727272;
+    font-weight: 70px;
+}
+.tems-title .text-features{
+    color: #ff900e;
+    font-weight: 700px;
+}
