--- a/styles/architechs.css
+++ b/styles/architechs.css
@@ -7,6 +7,9 @@
 *{
     font-family: 'Work Sans', sans-serif;
 }
+.text-light-gray {
+    color: #727272;
+}
 .btn-primary{
     border-radius: 8px;
     color: #fff;
@@ -55,23 +58,12 @@ nav li a{
     font-weight: 700;
     color: #131313;
 }
-.banner-description{
-    color: #727272;
-}
+ 
 .banner img {
     margin: 20px;
     width: 100%;
 }
-/* responsive media queries */
-/* mobile devices */
-@media screen and (max-width:576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-}
+ 
 /* tablet or medium devices */
 @media screen and (min-width:576px) and (max-width:960px) {
     header{
@@ -84,7 +76,7 @@ nav li a{
 /* main styles */
 main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 /*  tems styles*/
 .tems-container{
@@ -104,10 +96,32 @@ main{
     font-size: 2.8rem;
 }
 .tems-title .Quick-list{
-    color: #727272;
     font-weight: 70px;
 }
 .tems-title .text-features{
     color: #ff900e;
     font-weight: 700px;
+}
+
+
+
+
+/* responsive media queries */
+/* mobile devices */
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav,
+    .tems-container
+    {
+        flex-direction: column;
+    }
+    .tems-img-container{
+        grid-template-columns: 1fr;
+    }
+    .tems-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
