--- a/styles/architechs.css
+++ b/styles/architechs.css
@@ -19,6 +19,11 @@
    cursor: pointer;
    border: 0;
 }
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
 /* header styles */
 header{
     background: rgba(255, 144, 14, 0.10);
@@ -29,11 +34,7 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-.nav-title{
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
-}
+ 
 nav > ul {
     display: flex;
 }
@@ -58,21 +59,15 @@ nav li a{
     font-weight: 700;
     color: #131313;
 }
+.img-content{
+    width: 100%;
+}
  
 .banner img {
     margin: 20px;
     width: 100%;
 }
  
-/* tablet or medium devices */
-@media screen and (min-width:576px) and (max-width:960px) {
-    header{
-        padding: 50px;
-    }
-    nav{
-        flex-direction: column;
-    }
-}
 /* main styles */
 main{
     max-width: 1440px;
@@ -102,9 +97,44 @@ main{
     color: #ff900e;
     font-weight: 700px;
 }
+/* facts section */
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #ff900e;
+    text-align: center;
+    padding: 30px;
+}
 
 
-
+.facts-card-container{
+    display: flex;
+    justify-content: space-around ;
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+/* sponsors styles */
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 
 /* responsive media queries */
 /* mobile devices */
@@ -113,15 +143,30 @@ main{
         padding: 20px;
     }
     nav,
-    .tems-container
+    .tems-container,
+    .facts-card-container
+    .ors-img-container
     {
-        flex-direction: column;
+        flex-direction: column; 
     }
     .tems-img-container{
         grid-template-columns: 1fr;
     }
-    .tems-content{
+    .tems-content, .facts-card-container{
         padding-left: 20px;
         padding-right: 20px;
+    }
+    .facts-card-container{
+        gap: 20px;
+    }
+}
+ 
+/* tablet or medium devices */
+@media screen and (min-width:576px) and (max-width:960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
     }
 }
